--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/agencia?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+springdoc.api-docs.enabled = true
+springdoc.swagger-ui.enabled = true
+
+# url o ruta de swagger-ui
+springdoc.swagger-ui.path=/doc/swagger-ui.html
