--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=pruebatecnica_4
 
 # Database information
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/agencia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
@@ -13,3 +13,7 @@ springdoc.swagger-ui.enabled = true
 
 # url o ruta de swagger-ui
 springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+
+
+
