--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ springdoc.swagger-ui.enabled = true
 # url o ruta de swagger-ui
 springdoc.swagger-ui.path=/doc/swagger-ui.html
 
+spring.security.user.name=exe
+spring.security.user.password=1234
 
 
 
